first-dep-test1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deployment
  labels:
    app: first
spec:
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
      - name: first-container
        image: shweta217/first-k8s-test
        ports:
        - containerPort: 8081
		
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  type: NodePort
  selector:
    app: first
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 32000
